@@ -1,3 +1,9 @@
+2024-09-18 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/gen.c,
+	  src/z80/peeph.def:
+	  Fix and improve right shift optimization, RFE #935.
+
 2024-09-17 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/z80/gen.c,
